# fastapi-project-template

./: .coveragerc  .dockerignore  .editorconfig  .env_template  .gitignore  .pre-commit-config.yaml  .python-version  .space.kts  AUTHORS.rst  Containerfile  Dockerfile  MANIFEST.in  README.md  README.rst  compose.yml  docker-compose.yml  pyproject.toml  requirements.txt  requirements_dev.txt  setup.cfg  setup.py
.devcontainer/: Containerfile  devcontainer.json  docker-compose.yml
.docker/: rabbitmq_init.sh
.docker/keycloak/data/import/: keycloak-entrypoint.sh  keycloakdb.mv.db  keycloakdb.trace.db
.docker/opa/policies/: authz.rego
.docker/rabbitmq/: definitions.json  init.sh
.github/workflows/: checks.yaml  checks.yml  ci.yaml  lint.yml
.helm/: Chart.yaml  values-db.yaml  values.yaml
.helm/files/keycloak/data/import/: keycloak-entrypoint.sh
.helm/files/opa/policies/: authz.rego
.helm/templates/: NOTES.txt  _helpers.tpl  backend-deployment.yaml  backend-hook-job-create-superuser.yaml  backend-hook-job-db-migrate.yaml  backend-hook-job-secret.yaml  backend-service.yaml  cronjobs.yaml  frontend-deployment.yaml  frontend-service.yaml  hpa.yaml  ingress.yaml  keycloak.yaml  middleware.yaml  opa.yaml  postgres.yaml  secret.yaml  serviceaccount.yaml
.helm/templates/tests/: test-connection.yaml
clib/: lib.c
docs/: conf.py  index.rst
lib/: extmod.c
migrations/: env.py  script.py.mako
migrations/versions/: 20250328171956_0b58a414ed5e_initial.py  20260208160029_777701db082a_initial.py  20260208215122_7a217dc110d6_initial.py
rustlib/: Cargo.toml  lib.rs
src/fastapi_project_template/: __init__.py  __main__.py  _cmod.pyi  _rustmod.pyi  conf.py  core.py  helpers.py  jobs.py
src/fastapi_project_template/api/: helpers.py  http.py  users.py
src/fastapi_project_template/api/v1/: auth.py  endpoints.py  handlers.py  models.py  opa.py  routers.py  schema.py  schemas.py
src/fastapi_project_template/api/v1/endpoints/: config.py  handlers.py  health.py  users.py
src/fastapi_project_template/core/: users.py
src/fastapi_project_template/db/: __init__.py  alembic.ini  helpers.py  models.py  user_db_helpers.py
src/fastapi_project_template/db/migrations/: env.py  script.py.mako
src/fastapi_project_template/db/migrations/versions/: 20221201152859_0656cd2c6cce_initial.py  20221227224315_a1c2f94dfd6e_initial.py
src/fastapi_project_template/db/models/: __init__.py  common.py  users.py
src/fastapi_project_template/dto/: users.py
src/fastapi_project_template/jobs/: __main__.py  bootstrap.py
src/fastapi_project_template/log/: filters.py
src/fastapi_project_template/logging/: filters.py  formatter.py
src/fastapi_project_template/middleware/: correlation_id.py  log_context.py
src/fastapi_project_template/services/users/: dao.py  dto.py  users_service.py
src/template_project/: __init__.py  __main__.py  conf.py  core.py
src/template_project/api/: http.py  models.py
src/template_project/db/: __init__.py  alembic.ini  models.py
src/template_project/db/migrations/: env.py
tests/: conftest.py
tests/unit/: test_poc.py
