[build-system]
requires = ["setuptools", "setuptools_scm", "setuptools_rust", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "fastapi-project-template"
description = "FastAPI project template"
authors = [
    { name = "Oleg Korsak", email = "kamikaze.is.waiting.you@gmail.com" }
]
license = "GPL-3.0"
readme = { file = "README.rst", content-type = "text/x-rst; charset=UTF-8" }
classifiers = [
    "Development Status :: 4 - Beta",
    "Programming Language :: Python",
]
requires-python = "==3.14.3"
dynamic = ["version"]
dependencies = [
    "aiohttp[speedups]==3.13.3",
    "alembic==1.18.3",
    "alembic-postgresql-enum==1.9.0",
    "alembic_utils==0.8.8",
    "asyncpg==0.31.0",
    "Authlib==1.6.7",
    "certifi==2026.1.4",
    "fastapi-commons==0.3.0",
    "fastapi-pagination==0.15.10",
    "fastapi==0.128.5",
    "granian==2.7.1; platform_system == 'Windows'",
    "granian[uvloop]==2.7.1; platform_system != 'Windows'",
    "msgpack==1.1.2",
    "orjson==3.11.7",
    "passlib[argon2]==1.7.4",
    "pwdlib==0.3.0",
    "pydantic==2.12.5",
    "pydantic-settings==2.12.0",
    "PyJWT==2.11.0",
    "python-dateutil==2.9.0.post0",
    "python3-commons==0.15.8",
    "SQLAlchemy[asyncio]==2.0.46",
    "starlette<1.0.0",
    "uvloop==0.22.1; platform_system != 'Windows'",
]

[project.urls]
"Homepage" = "https://github.com/kamikaze/fastapi-project-template"
"Documentation" = "https://github.com/kamikaze/fastapi-project-template/wiki"

[dependency-groups]
dev = [
    "build",
    "pip",
    "pre-commit",
    "pyright",
    "ruff",
    "setuptools",
    "setuptools_rust",
    "ty",
    "wheel"
]
testing = [
    "pytest",
    "pytest-asyncio",
    "pytest-cov",
]

[tool.setuptools]
zip-safe = false
package-dir = { "" = "src" }
include-package-data = true

[tool.setuptools.packages.find]
where = ["src"]
exclude = ["tests"]

[tool.setuptools.package-data]
fastapi_project_template = [
    "rustlib/Cargo.toml",
    "rustlib/lib.rs",
    "clib/extmod.c",
    "*.rst",
    "*.txt",
    "*.md"
]

[tool.setuptools.dynamic]
readme = { file = "README.rst" }
version = { attr = "setuptools_scm.get_version" }

[tool.setuptools_rust]
# Optional Rust-specific configuration
# Positioning of the compiled extension
extensionmodule = true

[tool.bdist_wheel]
universal = true

[tool.build_sphinx]
source_dir = "docs"
build_dir = "build/sphinx"

[tool.devpi.upload]
no-vcs = true
formats = ["bdist_wheel"]

[tool.ruff]
line-length = 120
indent-width = 4
target-version = "py314"

[tool.ruff.analyze]
detect-string-imports = true

[tool.ruff.lint]
select = [
    "A",
    "ANN",
    "ARG",
    "ASYNC",
    "B",
    "C4",
    "DTZ",
    "E",
    "EM",
    "EXE",
    "F",
    "FA",
    "FAST",
    "FBT",
    "FLY",
    "FURB",
    "G",
    "I",
    "ICN",
    "INP",
    "ISC",
    "LOG",
    "N",
    "NPY",
    "PD",
    "PERF",
    "PIE",
    "PLC",
    "PLE",
    "PLR",
    "PLW",
    "PT",
    "PTH",
    "PYI",
    "Q",
    "RET",
    "RSE",
    "RUF",
    "S",
    "SIM",
    "SLF",
    "SLOT",
    "T20",
    "TC",
    "TID",
    "TRY",
    "UP",
    "W",
    "YTT",
]
ignore = [
    "TC001",
    "TC002",
    "TC003", # issues with msgspec.Struct subclasses
]

[tool.ruff.lint.per-file-ignores]
"tests/*.py" = ["S101"]

[tool.ruff.lint.flake8-quotes]
docstring-quotes = "double"
inline-quotes = "single"

[tool.ruff.format]
exclude = ["*.pyi"]
indent-style = "space"
quote-style = "single"

[tool.pyright]
pythonVersion = "3.14"
venvPath = "."
venv = ".venv"
reportMatchNotExhaustive = "error"
reportUnnecessaryComparison = "error"

[tool.ty.rules]
unknown-argument = "ignore"  # false positives for Pydantic model fields

[tool.pytest.ini_options]
pythonpath = ["src"]
asyncio_mode = "strict"
asyncio_default_fixture_loop_scope = "function"
addopts = "--cov fastapi_project_template --cov-fail-under=20 --cov-report term-missing --verbose"
norecursedirs = ["dist", "build", ".tox"]
testpaths = ["tests"]
